WIP: RaftAfctorRecoverySupport migration update
JIRA: CONTROLLER-2133
Change-Id: Ie44e5822a26afe49f338a01c8013b685b3311509
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>