@@ -10,11 +10,13 @@ package org.opendaylight.controller.cluster.raft;
 import static java.util.Objects.requireNonNull;
 
 import com.google.common.base.Stopwatch;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
+import org.apache.pekko.persistence.AbstractPersistentActor;
 import org.apache.pekko.persistence.RecoveryCompleted;
 import org.apache.pekko.persistence.SnapshotOffer;
-import org.opendaylight.controller.cluster.PersistentDataProvider;
+import org.eclipse.jdt.annotation.NonNull;
+import org.eclipse.jdt.annotation.Nullable;
 import org.opendaylight.controller.cluster.raft.persisted.ApplyJournalEntries;
 import org.opendaylight.controller.cluster.raft.persisted.ClusterConfig;
 import org.opendaylight.controller.cluster.raft.persisted.DeleteEntries;
@@ -24,6 +26,7 @@ import org.opendaylight.controller.cluster.raft.persisted.Snapshot;
 import org.opendaylight.controller.cluster.raft.persisted.Snapshot.State;
 import org.opendaylight.controller.cluster.raft.persisted.UpdateElectionTerm;
 import org.opendaylight.controller.cluster.raft.spi.RaftEntryMeta;
+import org.opendaylight.controller.cluster.raft.spi.TermInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -35,8 +38,10 @@ import org.slf4j.LoggerFactory;
 class RaftActorRecoverySupport {
     private static final Logger LOG = LoggerFactory.getLogger(RaftActorRecoverySupport.class);
 
-    private final RaftActorContext context;
-    private final RaftActorRecoveryCohort cohort;
+    private final @NonNull LocalAccess localAccess;
+    private final @NonNull RaftActorContext context;
+    private final @NonNull RaftActorRecoveryCohort cohort;
+    private final @Nullable TermInfo origTermInfo;
 
     private int currentRecoveryBatchCount;
     private boolean dataRecoveredWithPersistenceDisabled;
@@ -46,12 +51,15 @@ class RaftActorRecoverySupport {
     private Stopwatch recoveryTimer;
     private Stopwatch recoverySnapshotTimer;
 
-    RaftActorRecoverySupport(final RaftActorContext context, final RaftActorRecoveryCohort cohort) {
+    RaftActorRecoverySupport(final @NonNull LocalAccess localAccess, final RaftActorContext context,
+            final RaftActorRecoveryCohort cohort) {
+        this.localAccess = requireNonNull(localAccess);
         this.context = requireNonNull(context);
         this.cohort = requireNonNull(cohort);
+        origTermInfo = localAccess.termInfoStore().loadAndSetTerm();
     }
 
-    boolean handleRecoveryMessage(final Object message, final PersistentDataProvider persistentProvider) {
+    boolean handleRecoveryMessage(final AbstractPersistentActor actor, final Object message) {
         LOG.trace("{}: handleRecoveryMessage: {}", context.getId(), message);
 
         anyDataRecovered = anyDataRecovered || !(message instanceof RecoveryCompleted);
@@ -68,7 +76,7 @@ class RaftActorRecoverySupport {
             case ClusterConfig msg -> context.updatePeerIds(msg);
             case UpdateElectionTerm(var termInfo) -> context.setTermInfo(termInfo);
             case RecoveryCompleted msg -> {
-                onRecoveryCompletedMessage(persistentProvider);
+                onRecoveryCompletedMessage(actor);
                 return true;
             }
             default -> {
@@ -116,7 +124,7 @@ class RaftActorRecoverySupport {
 
         var snapshot = (Snapshot) offer.snapshot();
 
-        for (ReplicatedLogEntry entry: snapshot.getUnAppliedEntries()) {
+        for (var entry : snapshot.getUnAppliedEntries()) {
             if (isMigratedPayload(entry)) {
                 hasMigratedDataRecovered = true;
             }
@@ -126,9 +134,8 @@ class RaftActorRecoverySupport {
             // We may have just transitioned to disabled and have a snapshot containing state data and/or log
             // entries - we don't want to preserve these, only the server config and election term info.
 
-            snapshot = Snapshot.create(
-                    EmptyState.INSTANCE, Collections.emptyList(), -1, -1, -1, -1,
-                    snapshot.termInfo(), snapshot.getServerConfiguration());
+            snapshot = Snapshot.create(EmptyState.INSTANCE, List.of(), -1, -1, -1, -1,
+                snapshot.termInfo(), snapshot.getServerConfiguration());
         }
 
         // Create a replicated log with the snapshot information
@@ -273,7 +280,7 @@ class RaftActorRecoverySupport {
         currentRecoveryBatchCount = 0;
     }
 
-    private void onRecoveryCompletedMessage(final PersistentDataProvider persistentProvider) {
+    private void onRecoveryCompletedMessage(final AbstractPersistentActor raftActor) {
         if (currentRecoveryBatchCount > 0) {
             endCurrentLogRecoveryBatch();
         }
@@ -297,6 +304,24 @@ class RaftActorRecoverySupport {
                 replLog.lastIndex(), replLog.lastTerm(), replLog.getSnapshotIndex(), replLog.getSnapshotTerm(),
                 replLog.size());
 
+
+        // Populate property-based storage if needed, or roll-back any voting information leaked by recovery process
+        final var infoStore = localAccess.termInfoStore();
+        final var orig = origTermInfo;
+        if (orig == null) {
+            // No original info observed, seed it after recovery and trigger a snapshot
+            final var current = infoStore.currentTerm();
+            infoStore.storeAndSetTerm(current);
+
+            // From this point on we will not update TermInfo from Akka persistence
+            LOG.info("{}: Local TermInfo store seeded with {}", context.getId(), current);
+            hasMigratedDataRecovered = true;
+        } else {
+            // Undo whatever recovery has done to what we have observed
+            LOG.debug("{}: restoring local {}", context.getId(), orig);
+            infoStore.setTerm(orig);
+        }
+
         if (dataRecoveredWithPersistenceDisabled
                 || hasMigratedDataRecovered && !context.getPersistenceProvider().isRecoveryApplicable()) {
             if (hasMigratedDataRecovered) {
@@ -310,13 +335,11 @@ class RaftActorRecoverySupport {
             // messages. Either way, we persist a snapshot and delete all the messages from the akka journal
             // to clean out unwanted messages.
 
-            Snapshot snapshot = Snapshot.create(
-                    EmptyState.INSTANCE, Collections.<ReplicatedLogEntry>emptyList(),
-                    -1, -1, -1, -1, context.termInfo(), context.getPeerServerInfo(true));
+            Snapshot snapshot = Snapshot.create(EmptyState.INSTANCE, List.of(), -1, -1, -1, -1,
+                context.termInfo(), context.getPeerServerInfo(true));
 
-            persistentProvider.saveSnapshot(snapshot);
-
-            persistentProvider.deleteMessages(persistentProvider.getLastSequenceNumber());
+            raftActor.saveSnapshot(snapshot);
+            raftActor.deleteMessages(raftActor.lastSequenceNr());
         } else if (hasMigratedDataRecovered) {
             LOG.info("{}: Snapshot capture initiated after recovery due to migrated messages", context.getId());
 
